...

    }
    
    func showAlert(message: String) {
        DispatchQueue.main.async {
            // Show Alert
            let alertVc = UIAlertController(title: "Error", message: message, preferredStyle: .alert)
            alertVc.addAction(UIAlertAction(title: "OK", style: .default, handler: { (action) in
                self.dismiss(animated: true, completion: nil)
            }))

            self.present(alertVc, animated: true)
        }
    }
...
