//
//  AKWeatherUITests.swift
//  AKWeatherUITests
//
//  Created by Atif Khan on 19/05/2020.
//  Copyright © 2020 Atif Khan. All rights reserved.
//

import XCTest

class AKWeatherUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    
    func testInputFlow() {
        
        
        let app = XCUIApplication()
        app.textFields["E.g Dubai, Sharjah, Abu Dhabi"].tap()
        
        let checkWeatherStaticText = app/*@START_MENU_TOKEN@*/.staticTexts["CHECK WEATHER"]/*[[".buttons[\"CHECK WEATHER\"].staticTexts[\"CHECK WEATHER\"]",".staticTexts[\"CHECK WEATHER\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        checkWeatherStaticText.tap()
        app.alerts["Error"].scrollViews.otherElements.buttons["OK"].tap()
        checkWeatherStaticText.tap()
        app.navigationBars["AKWeather.MultipleCitiesVC"].buttons["Back"].tap()
        
        
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
